# drivemon

./: .gitignore  Cargo.toml  LICENSE.md  README.md  release.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  disk.rs  main.rs  smart.rs  ui.rs
