[package]
name = "drivemon"
version = "0.1.0"
edition = "2024"
description = "A TUI disk health and I/O monitor"
license = "MIT"
repository = "https://github.com/zHappySnake/drivemon"
keywords = ["tui", "disk", "monitor", "smart", "linux", "cli"]
categories = ["command-line-utilities", "system"]

[[bin]]
name = "drivemon"
path = "src/main.rs"
 
[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = "0.38.4"
 
